[metadata]
name = audresample
author = Johannes Wagner, Andrea Crespi, Hagen Wierstorf
author-email = jwagner@audeering.com, acrespi@audeering.com, hwierstorf@audeering.com
url = https://gitlab.audeering.com/tools/pyaudresample/
project-urls =
    Documentation = http://tools.pp.audeering.com/pyaudresample/
description = Provides functions to resample and remix a signal
long-description = file: README.rst, CHANGELOG.rst
license = audEERING
license-file = LICENSE
keywords = audio, tools, dsp, audeering
platforms= any
classifiers =
    Development Status :: 3 - Alpha
    License :: audEERING
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

[options]
packages = find:
include_package_data = True
install_requires =
    numpy
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --flake8
    --doctest-plus
    --ignore=docs/examples
    --ignore=benchmarks
    --ignore=tests/test-assets
    --cov=audresample
    --cov-fail-under=100
    --cov-report term-missing
xfail_strict = true

[flake8]
ignore =
    W503  # math, https://github.com/PyCQA/pycodestyle/issues/513
    __init__.py F401 F403  # ignore unused and * imports
