[metadata]
name = audresample
author = Johannes Wagner, Andrea Crespi, Hagen Wierstorf
author-email = jwagner@audeering.com, acrespi@audeering.com, hwierstorf@audeering.com
url = https://github.com/audeering/audresample/
project-urls =
    Documentation = https://audeering.github.io/audresample/
description = Provides functions to resample and remix a signal
long-description = file: README.rst, CHANGELOG.rst
license = MIT
license-file = LICENSE
keywords = audio, dsp, resample, remix
platforms= any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
packages = find:
include_package_data = True
install_requires =
    numpy
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --flake8
    --doctest-plus
    --ignore=docs/examples
    --ignore=benchmarks
    --ignore=tests/test-assets
    --cov=audresample
    --cov-fail-under=100
    --cov-report term-missing
    --cov-report xml
xfail_strict = true

[flake8]
ignore =
    W503  # math, https://github.com/PyCQA/pycodestyle/issues/513
    __init__.py F401 F403  # ignore unused and * imports
