[metadata]
name = audresample
author = Johannes Wagner, Andrea Crespi, Hagen Wierstorf
author_email = jwagner@audeering.com, acrespi@audeering.com, hwierstorf@audeering.com
url = https://github.com/audeering/audresample/
project_urls =
    Documentation = https://audeering.github.io/audresample/
description = Provides functions to resample and remix a signal
long_description = file: README.rst, CHANGELOG.rst
license = MIT
license_file = LICENSE
keywords = audio, dsp, resample, remix
platforms= any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering

[options]
install_requires =
    numpy
setup_requires =
    setuptools_scm

[tool:pytest]
addopts =
    --doctest-plus
    --ignore=docs/examples
    --ignore=benchmarks
    --ignore=tests/test-assets
    --cov=audresample
    --cov-fail-under=100
    --cov-report term-missing
    --cov-report xml
xfail_strict = true

[flake8]
exclude =
    .eggs,
    build,
extend-ignore =
    # math, https://github.com/PyCQA/pycodestyle/issues/513
    W503,
per-file-ignores =
    # ignore unused imports
    __init__.py: F401,
